test/should_fail/CheckIvar.oj

@implementation ShouldFail0

- (void) testCheckIvar
{
     // The next line should produce an error as long as --check-ivars is set
     _moo;
}

@end
